# logicism

./: Cargo.toml
src/: canvas.rs  component.rs  components.rs  main.rs  wire.rs
