[package]
name = "logicism"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.3", features = ["svg"] }
iced_native = "0.4"
iced_graphics = { version = "0.2", features = ["canvas"] }
